--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #ffffff;
-$secondary-color: #2343f7;
+$primary-color: #00416a;
+$secondary-color: #e4e5e6;
 
 $white-color: #fff;
 
