--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,8 +1,8 @@
 // COLORS
-$primary-color: #00416a;
-$secondary-color: #e4e5e6;
+$primary-color: #40e0d0;
+$secondary-color: #ff8c00;
 
-$white-color: #ff0101;
+$white-color: #ff0080;
 
 $dark-grey: #333333;
 
