--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #ffffff;
-$secondary-color: #000000;
+$primary-color: #05386B;
+$secondary-color: #379683;
 
 $white-color: #ffffff;
 
